--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -6,9 +6,32 @@
 
 <div th:replace="fragments :: page-header"></div>
 
-<div class="container body-content">
+<div class="container body-content" th:object="${jobForm}">
 
     <!-- // TODO #2 - display the job fields, one per row -->
+    <table>
+        <tr>
+            <td>Name</td>
+        <td th:text="${jobForm.name}"></td>
+        </tr>
+        <tr>
+            <td>Employer</td>
+        <td th:text="${jobForm.employer}"></td>
+        </tr>
+        <tr>
+            <td>Location</td>
+        <td th:text="${jobForm.location}"></td>
+        </tr>
+        <tr>
+            <td>Position Type</td>
+        <td th:text="${jobForm.positionType}"></td>
+        </tr>
+        <tr>
+            <td>Skill</td>
+        <td th:text="${jobForm.coreCompetency}"></td>
+        </tr>
+
+    </table>
 
 </div>
 
